--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:migrate": "supabase migrations up",
     "db:test": "supabase db test",
     "db:reset": "supabase db reset",
-    "db:types": "supabase gen types typescript --local > src/types/database.types.ts"
+    "db:types": "supabase gen types typescript --local > src/types/database.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
